--- a/palavRadicaisFev.html
+++ b/palavRadicaisFev.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -32,49 +32,26 @@
         <nav class="nav-collapse">
             <ul>
                 <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a></li>
-                <li class="menu-item active"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>
-                <li class="menu-item"><a href="menuMesPalavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
+                <li class="menu-item"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>
+                <li class="menu-item active"><a href="menuMesPalavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
                 <li class="menu-item"><a href="menuMesPdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
-
-
             </ul>
         </nav>
     </header>
+
     <section>
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Sereis minhas testemunhas - Pr. Bruno Bernardelli - 29 fevereiro 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
-            <label for="">Deus não esta zangado com você - Pr. Raphael Vieira</label>
+            <label for="">Sereis minhas testemunhas - Pr. Bruno Bernardelli</label>
             <br>
-            <label for="">26 de janeiro de 2020</label>
-            <br>
-            <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
+            <label for="">29 de fevereiro de 2020</label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" style='color:aqua' download>
-               Download
-            </a>
-            </button>
-            <br>
-            <br>
-        </div>
-        <div class="palavrasAudio">
-            <br>
-            <audio controls>
-                <source src="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" type="audio/mpeg">
-            </audio>
-            <br>
-            <label for="">Deus ouve o justo - Pr. Raphael Vieira</label>
-            <br>
-            <label for="">19 de janeiro de 2020</label>
-            <br>
-            <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
-            <br>
-            <button>
-            <a href="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" style='color:aqua' download>
+            <a href="audio/radicaisLivres/Sereis minhas testemunhas - Pr. Bruno Bernardelli - 29 fevereiro 2020.mp3" download>
                Download
                </a>
             </button>
@@ -84,17 +61,15 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Relacionamentos que Transformam - Pr. Bruno Bernardelli - 23 fevereiro 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
-            <label for="">A oração que prevalece - Pr Raphael Vieira</label>
+            <label for="">Relacionamentos que Transformam - Pr. Bruno Bernardelli</label>
             <br>
-            <label for="">12 de janeiro de 2020</label>
-            <br>
-            <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
+            <label for="">22 de fevereiro de 2020</label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" style='color:aqua' download>
+            <a href="audio/radicaisLivres/Relacionamentos que Transformam - Pr. Bruno Bernardelli - 23 fevereiro 2020.mp3" download>
                Download
                </a>
             </button>
@@ -104,17 +79,33 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/cultoDomingo/Aspectos da oração - Pr Adalberto Garcias - 05 janeiro 2020 .mp3" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Quem é o meu próximo - Obr. Marlon Portela - 08 Fevereiro 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
-            <label for="">Aspectos da oração - Pr Adalberto Garcias</label>
+            <label for="">Quem é o meu próximo? - Obr. Marlon Portela</label>
             <br>
-            <label for="">05 de janeiro de 2020</label>
-            <br>
-            <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
+            <label for="">08 de fevereiro de 2020</label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/Aspectos da oração - Pr Adalberto Garcias - 05 janeiro 2020 .mp3" style='color:aqua' download>
+            <a href="audio/radicaisLivres/Quem é o meu próximo - Obr. Marlon Portela - 08 Fevereiro 2020.mp3" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes</label>
+            <br>
+            <label for="">01 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" download>
                Download
                </a>
             </button>
