--- a/confRadicais2020.html
+++ b/confRadicais2020.html
@@ -34,7 +34,7 @@
                 <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a></li>
                 <li class="menu-item"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>
                 <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
-                <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
+                <li class="menu-item"><a href="menuMesPdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
             </ul>
         </nav>
     </header>
