--- a/menuMesPalavRadicais.html
+++ b/menuMesPalavRadicais.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/especial.css">
+    <link rel="stylesheet" href="css/keyframes.css">
     <script src="js/responsive-nav.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,8 +27,7 @@
 
 </head>
 
-<body>
-
+<body onload="style='animation: animatetop'">
     <header>
         <a href="#home" class="logo" data-scroll></a>
         <nav class="nav-collapse">
@@ -36,30 +37,23 @@
                 </li>
                 <li class="menu-item"><a href="menuMesPalavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
                 <li class="menu-item"><a href="menuMesPdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
-
-
             </ul>
         </nav>
     </header>
     <section>
-        <div class="palavrasAudio">
+        <!-- <div class="menuVideira">
             <br>
-            <audio controls>
-                <source src="audio/mulheres/Desfrute a Graça - O caminho para viver sem frustrações - Pra Fabiana Faria - 28 fevereiro 2020.mp3"
-                    type="audio/mpeg">
-            </audio>
+            <input name="" id="" type="button" value="MARÇO" onclick="window.location.href='palavRadicaisMar.html'">
             <br>
-            <label for="">Desfrute a Graça - O caminho para viver sem frustrações - Pra Fabiana Faria</label>
+        </div> -->
+        <div class="menuVideira">
             <br>
-            <label for="">28 de fevereiro de 2020</label>
+            <input name="" id="" type="button" value="FEVEREIRO" onclick="window.location.href='palavRadicaisFev.html'">
             <br>
-            <button>
-                <a href="audio/mulheres/Desfrute a Graça - O caminho para viver sem frustrações - Pra Fabiana Faria - 28 fevereiro 2020.mp3"
-                style="color:rgb(219, 22, 203);" download>
-                    Download
-                </a>
-            </button>
+        </div>
+        <div class="menuVideira">
             <br>
+            <input name="" id="" type="button" value="JANEIRO" onclick="window.location.href='palavRadicaisJan.html'">
             <br>
         </div>
     </section>
