--- a/menuMesPdfCulto.html
+++ b/menuMesPdfCulto.html
@@ -33,10 +33,10 @@
         <nav class="nav-collapse">
             <ul>
                 <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a></li>
-                <li class="menu-item active"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
+                <li class="menu-item"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
                 </li>
                 <li class="menu-item"><a href="menuMesPalavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
-                <li class="menu-item"><a href="menuMesPdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
+                <li class="menu-item active"><a href="menuMesPdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
             </ul>
         </nav>
     </header>
