--- a/palavCultoMar.html
+++ b/palavCultoMar.html
@@ -45,6 +45,27 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
+                <source src="audio/cultoDomingo/Conhecendo o Inimigo - Pr. Adalberto Garcias - 08 de marco de 2020.mp3"
+                    type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Conhecendo o Inimigo - Pr. Adalberto Garcias</label>
+            <br>
+            <label for="">08 de março de 2020</label>
+            <br>
+            <label for="">Série: <i style='color:rgb(255, 138, 5)'>Batalha Espiritual</i></label>
+            <br>
+            <button>
+                <a href="audio/cultoDomingo/Conhecendo o Inimigo - Pr. Adalberto Garcias - 08 de marco de 2020.mp3" style='color:rgb(184, 61, 255)' download>
+                    Download
+                </a>
+            </button>
+            <br>
+            <br>
+        </div>
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
                 <source src="audio/cultoDomingo/Filhos e Herdeiros - Pra. Fabiana Faria - 01 marco 2020.mp3"
                     type="audio/mpeg">
             </audio>
