--- a/pdfCultoMar.html
+++ b/pdfCultoMar.html
@@ -31,18 +31,19 @@
     <section id="audioPalavras" class="container">
         <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 08-03-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 08 de março - vid uberlandia.png" alt="">
+                </a>
+                <br>
+                <label for="">08 março 2020</label>
+                <br>
+            </div>
+            <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 01-03-2020.pdf" download>
                     <img src="image/capaInformativo/capa 01 de março - vid uberlandia.png" alt="">
                 </a>
                 <br>
                 <label for="">01 março 2020</label>
-                <br>
-            </div>
-            <div class="pdfAudio col-dg-6 col-dm-6">
-                <img src="image/capaInformativo/fundo preto.png" alt="">
-                </a>
-                <br>
-                <label for=""></label>
                 <br>
             </div>
         </div>
