add. part 1 palav culto 15mar20

--- a/palavCultoMar.html
+++ b/palavCultoMar.html
@@ -42,6 +42,29 @@
         </nav>
     </header>
     <section>
+        <!-- trecho palavra 15mar20 a inserir
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/cultoDomingo/A Armadura de Deus - Pr. Bruno Bernardelli - 15 de marco de 2020.mp3"
+                    type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">A Armadura de Deus - Pr. Bruno Bernardelli</label>
+            <br>
+            <label for="">15 de março de 2020</label>
+            <br>
+            <label for="">Série: <i style='color:rgb(255, 138, 5)'>Batalha Espiritual</i></label>
+            <br>
+            <button>
+                <a href="audio/cultoDomingo/A Armadura de Deus - Pr. Bruno Bernardelli - 15 de marco de 2020.mp3" style='color:rgb(255, 138, 5)' download>
+                    Download
+                </a>
+            </button>
+            <br>
+            <br>
+        </div> 
+        -->
         <div class="palavrasAudio">
             <br>
             <audio controls>
