alter. palavra 15mar20

--- a/palavCultoMar.html
+++ b/palavCultoMar.html
@@ -41,12 +41,10 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <!-- trecho palavra 15mar20 a inserir
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/cultoDomingo/A Armadura de Deus - Pr. Bruno Bernardelli - 15 de marco de 2020.mp3"
+                <source src="audio/cultoDomingo/A Armadura de Deus - Pr. Bruno Bernardelli - 15 marco 2020.mp3"
                     type="audio/mpeg">
             </audio>
             <br>
@@ -57,14 +55,13 @@
             <label for="">Série: <i style='color:rgb(255, 138, 5)'>Batalha Espiritual</i></label>
             <br>
             <button>
-                <a href="audio/cultoDomingo/A Armadura de Deus - Pr. Bruno Bernardelli - 15 de marco de 2020.mp3" style='color:rgb(255, 138, 5)' download>
+                <a href="audio/cultoDomingo/A Armadura de Deus - Pr. Bruno Bernardelli - 15 marco 2020.mp3" style='color:rgb(255, 138, 5)' download>
                     Download
                 </a>
             </button>
             <br>
             <br>
         </div> 
-        -->
         <div class="palavrasAudio">
             <br>
             <audio controls>
