--- a/palavCultoMar.html
+++ b/palavCultoMar.html
@@ -41,6 +41,7 @@
             </ul>
         </nav>
     </header>
+    <section>
         <div class="palavrasAudio">
             <br>
             <audio controls>
@@ -61,7 +62,7 @@
             </button>
             <br>
             <br>
-        </div> 
+        </div>
         <div class="palavrasAudio">
             <br>
             <audio controls>
